--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,15 @@ body{
 .bullpen, #chosenViking {
    width: 200px;
     height: 200px;
-    float: left;
+    float: left;      
+    text-align:center;
+    text-align:center;
+    
+}
+
+img {
+    max-width:175px;
+    max-height: 175px;
 }
 .yourCharacter {
     clear:both;
